@@ -1,3 +1,6 @@
+10/23/2009
+- fixed nocache var problem
+
 10/22/2009
 - fix trimwhitespace outputfilter parameter
 
